@@ -1,3 +1,7 @@
+20090513 mnemogogo-0.6.4
+* Resize images in a temporary directory.
+* Fix a major bug in the mapping of card ids to html filenames.
+
 20090512 mnemogogo-0.6.3
 * Speed up loading/saving databases in Java library.
 * Map more color names.
